# MLTF

./: .gitignore  README.md  index.html  pyproject.toml  setup.py
.github/workflows/: documentation.yaml  python-publish.yml
docs/: MLTF.rst  conf.py  index.html  index.rst  modules.rst  regression.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: MLTF.doctree  d.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  overview.doctree  regression.doctree
docs/_build/html/: .buildinfo  MLTF.html  d.html  genindex.html  index.html  installation.html  modules.html  objects.inv  overview.html  py-modindex.html  regression.html  search.html  searchindex.js
examples/momentsml_evaluation/: add_predictions  add_predictions.py  add_predictions_pkl.py
examples/momentsml_evaluation/models/: changenormerpickle.py  repickle_normers.sh
examples_gpu/: matmul.py
python/MLTF/: __init__.py  activations.py  calc.py  layer.py  loss_functions.py  model_momentsml.py  models.py  normer.py  plot.py  tools.py  tools_momentsml.py
python/ML_Tensorflow/: __init__.py  calc.py  info.py  layer.py  loss_functions.py  models.py  plot.py  tools.py
tests/: test_MLTF.py  test_MLTF_layer.py  test_MLTF_loss.py  test_MLTF_model.py  test_MLTF_normer.py  test_ML_Tensorflow.py  test_ML_Tensorflow_layer.py  test_ML_Tensorflow_loss.py  test_ML_Tensorflow_model.py  test_ML_Tensorflow_normer.py
(+70 files in other folders)
