[build-system]
requires = ["setuptools>=38", "wheel", "pybind11>=2.2"]

[project]
name = "MLTF"
version = "0.1.2"
authors = [
  { name="Andres Navarro Alsina", email="a.navarro.alsina@gmail.com" },
]
description = "Toolkit for creating ML models using tensorflow. Designed to short-cut implementation of widely used neuronal networks architectures."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andalenavals/MLTF"
"Bug Tracker" = "https://github.com/andalenavals/MLTF/issues"